plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

android {
    compileSdk 34
    buildToolsVersion '34.0.0'

    defaultConfig {
        applicationId "com.example.myfarm"
        minSdkVersion 26
        targetSdkVersion 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildFeatures {
        dataBinding true
        mlModelBinding true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    // Add this line to set namespace
    namespace 'com.example.myfarm'
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    implementation 'androidx.viewpager2:viewpager2:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'

    // Firebase dependencies
    implementation platform('com.google.firebase:firebase-bom:28.4.2')
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.google.firebase:firebase-database'
    implementation 'com.google.firebase:firebase-firestore'
    implementation 'com.google.firebase:firebase-storage'

    // TensorFlow Lite dependencies
    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'

    // Additional dependencies
//    implementation 'com.hendraanggrian.appcompat:socialview:0.2.1'
//    implementation 'com.hendraanggrian.appcompat:socialview-commons:0.2.1'
//    implementation 'com.github.fornewid:neumorphism:0.2.1'
    implementation 'com.android.volley:volley:1.2.0'
    implementation 'com.makeramen:roundedimageview:2.3.0'
    implementation 'com.github.bumptech.glide:glide:4.7.1'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'org.jetbrains:annotations:15.0'

    // Replace 'libs.play.services.tasks' with actual dependency if defined elsewhere

    // Testing dependencies
    testImplementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}

// This block is already included in your original file, no changes needed
allprojects {
    tasks.withType(JavaCompile) {
        options.compilerArgs << '--add-opens' << 'java.base/java.io=ALL-UNNAMED'
    }
}
